Fix layout horziontal spacing
At certain lower window sizes, the sidebar on the OpenRazer would
overlap. Caused by the long <pre> tag.

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -26,7 +26,7 @@ p {
 }
 
 .wrapper {
-    max-width: calc(1500px - (30px * 2));
+    max-width: calc(1400px - (30px * 2));
     margin-right: auto;
     margin-left: auto;
     padding-right: 30px;
