--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -20,7 +20,7 @@ $primary-font: 'Play', 'Ubuntu', 'DejaVu Sans', 'Open Sans', sans-serif;
 
 /* Screen Sizes */
 $screen-sm: 540px;
-$screen-md: 720px;
+$screen-md: 767px;
 $screen-lg: 960px;
 $screen-xl: 1140px;
 
